# ScriptCode

./: .gitignore  README.md  README.txt  pyproject.toml
CrawlScript/: config.json  yuque.py  yuque.spec
CrawlScript/yuque/: config.json  yuque.py
CrawlScript/yuque/Go/: JWT.md  基本结构类型.md
CrawlScript/yuque/Python/: 01 Python环境配置.md  day 06集合.md  day 12 函数高级.md  day13-装饰器.md  day14-模块os&sys&time.md  day15-模块json+time.md  day16-time&datetime&异常处理.md  day17-生成器&迭代器.md  day18-作业讲解&回顾.md  day19-面向对象.md  day20类成员&成员修饰符.md  day21-对象嵌套.md  day23-单例模式&logging.md  例题库.md  基础进阶用法.md  常用工具类.md  正则表达式.md  装饰器进阶.md
CrawlScript/yuque/开发记录总览/: Docker 部署脚本模板.md  数字失真问题.md
CrawlScript/yuque/硬件知识/: Modbus 协议.md
CythonEncrypt/: encrypt.py
DataHandleScript/postgres_2_clickhouse/: Dockerfile  README.md  config.json  main.py  pyproject.toml
DockerScript/: Docker Run 容器相关脚本.md
DockerScript/docker-compose/: mysql_compose.yaml
ShellScript/: 基于docker备份pgsql数据库表.sh  基于docker恢复pgsql数据库表.sh
