[tool.poetry]
name = "scriptcode"
version = "0.1.0"
description = ""
authors = ["rion"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
requests = "^2.28.1"
psutil = "^5.9.3"
pyinstaller = "4.10"
cython = "^0.29.33"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
